# baby-safety-monitor

./: .env.example  .gitignore  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: Dockerfile  pom.xml
backend-go/: Dockerfile  MIGRATION_SUMMARY.md  PERFORMANCE_COMPARISON.md  README.md  config.yaml  go.mod  go.sum
backend-go/cmd/server/: main.go
backend-go/internal/config/: config.go
backend-go/internal/controller/: alert_controller.go  danger_zone_controller.go  health_controller.go  vision_event_controller.go
backend-go/scripts/: performance_test.sh  simple_test.sh  start.sh
backend-rust/: Cargo.toml  diesel.toml
backend-rust/migrations/2025-10-09-174221-0000_create_tables/: down.sql  up.sql
backend-rust/src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs  sse.rs
docs/: mac_camera_guide.md  mac_camera_quick_start.md  remote_camera_guide.md
examples/: camera_configs.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App-enhanced.css  App-enhanced.tsx  App.css  App.tsx  store.ts
monitoring/: alerts.yml  prometheus.yml
scripts/: backup.sh  camera_demo.py  health_check.sh  http_stream_server.py  log_maintenance.sh  mac_camera_setup.py  mac_camera_simple.py  recovery.sh  rtsp_server.py  start_services.sh  test_camera.py  test_detection.py  test_mac_camera.py
services/agent/: Dockerfile  app.py  requirements.txt
services/vision/: Dockerfile  app.py  opencv_test.py  remote_vision.py  requirements.txt  test_app.py  test_vision.py
(+29 files in other folders)
