[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"] }
r2d2 = "0.8"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web-actors = "4.3.0"
bytes = "1"
